--- a/FeatureSelection.ipynb
+++ b/FeatureSelection.ipynb
@@ -6,7 +6,7 @@
       "name": "FeatureSelection.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPQwuyfkatNrH6UK3gxUA3d",
+      "authorship_tag": "ABX9TyMEN6rMPiUufFksSJgQ/gmd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,6 +67,12 @@
         "from sklearn import svm\n",
         "from sklearn import tree\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.ensemble import ExtraTreesClassifier\n",
+        "from sklearn.feature_selection import SelectFromModel\n",
+        "from sklearn.feature_selection import SelectKBest\n",
+        "from sklearn.feature_selection import chi2\n",
+        "from sklearn.linear_model import LassoCV\n",
+        "\n",
         "#for dirname, _, filenames in os.walk('/kaggle/input'):\n",
         "#    for filename in filenames:\n",
         "#        print(os.path.join(dirname, filename))"
@@ -348,6 +354,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DbQpJH6UUEYY",
+        "colab_type": "text"
+      },
+      "source": [
+        "Decision Trees models which are based on ensembles (eg. Extra Trees and Random Forest) can be used to rank the importance of the different features. Knowing which features our model is giving most importance can be of vital importance to understand how our model is making it’s predictions (therefore making it more explainable). At the same time, we can get rid of the features which do not bring any benefit to our model (or confuse it to make a wrong decision!)."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Sy0WgQtP2D6F",
@@ -394,7 +410,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Feature importance"
+        "# **Feature importance**"
       ]
     },
     {
@@ -407,13 +423,23 @@
       "source": [
         "start = time.process_time()\n",
         "trainedforest = RandomForestClassifier(n_estimators=700).fit(X_Train,Y_Train)\n",
-        "print(time.process_time() - start)\n",
+        "print(\"time= \",time.process_time() - start)\n",
         "predictionforest = trainedforest.predict(X_Test)\n",
-        "print(confusion_matrix(Y_Test,predictionforest))\n",
+        "print(\"Confusion Matrix: \\n\",confusion_matrix(Y_Test,predictionforest))\n",
         "print(classification_report(Y_Test,predictionforest))"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u_n-Mh5zUVTH",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Use the trained forest to create **Feature Importance Plot**"
+      ]
     },
     {
       "cell_type": "code",
@@ -425,11 +451,21 @@
       "source": [
         "figure(num=None, figsize=(20, 22), dpi=80, facecolor='w', edgecolor='k')\n",
         "\n",
-        "feat_importances = pd.Series(trainedforest.feature_importances_, index= X.columns)\n",
+        "feat_importances = pd.Series(trainedforest.feature_importances_, index= X.columns[:-1])\n",
         "feat_importances.nlargest(19).plot(kind='barh')"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v_2Ou3ChWNUv",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Using the top most important features, retrain the model.**"
+      ]
     },
     {
       "cell_type": "code",
@@ -447,6 +483,27 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Kon8T6JxWm_b",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Retrain the Random Forest model with the top most important features**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uh0BS3hlW3d2",
+        "colab_type": "text"
+      },
+      "source": [
+        "Reducing the number of features, the model loses .04% in precision. <br>\n",
+        "The training time is reduced from 2.2948669890000133 to 1.3669953309999983"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "oJvw1UMA2Zko",
@@ -456,9 +513,9 @@
       "source": [
         "start = time.process_time()\n",
         "trainedforest = RandomForestClassifier(n_estimators=700).fit(X_Train2,Y_Train2)\n",
-        "print(time.process_time() - start)\n",
+        "print(\"time = \",time.process_time() - start)\n",
         "predictionforest = trainedforest.predict(X_Test2)\n",
-        "print(confusion_matrix(Y_Test2,predictionforest))\n",
+        "print(\"Confusion Matrix: \\n\",confusion_matrix(Y_Test2,predictionforest))\n",
         "print(classification_report(Y_Test2,predictionforest))"
       ],
       "execution_count": null,
@@ -471,7 +528,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Recursive feature elimination"
+        "**Perform Feature Selection by visualizing a trained Decision Tree structure**"
       ]
     },
     {
@@ -510,7 +567,7 @@
         "model.fit(RFE_X_Train,Y_Train) \n",
         "print(\"Number of Features: \", rfe.n_features_)\n",
         "print(\"Selected Features: \")\n",
-        "colcheck = pd.Series(rfe.support_,index = list(X.columns))\n",
+        "colcheck = pd.Series(rfe.support_,index = list(X.columns[:-1]))\n",
         "colcheck[colcheck == True].index"
       ],
       "execution_count": null,
@@ -523,7 +580,7 @@
         "colab_type": "text"
       },
       "source": [
-        "SelectFromModel: Meta-transformer for selecting features based on importance weights."
+        "**SelectFromModel**: Meta-transformer for selecting features based on importance weights."
       ]
     },
     {
@@ -534,9 +591,6 @@
         "colab": {}
       },
       "source": [
-        "from sklearn.ensemble import ExtraTreesClassifier\n",
-        "from sklearn.feature_selection import SelectFromModel\n",
-        "\n",
         "model = ExtraTreesClassifier()\n",
         "start = time.process_time()\n",
         "model = model.fit(X_Train,Y_Train)\n",
@@ -606,7 +660,7 @@
         "colab_type": "text"
       },
       "source": [
-        "correlation matrix analysis"
+        "# **Correlation matrix analysis**"
       ]
     },
     {
@@ -635,12 +689,23 @@
         "figure(num=None, figsize=(12, 10), dpi=80, facecolor='w', edgecolor='k')\n",
         "\n",
         "corr= Numeric_df.corr()\n",
-        "sns.heatmap(corr, xticklabels=corr.columns.values, yticklabels=corr.columns.values)\n",
-        "\n",
+        "sns.heatmap(corr, xticklabels=corr.columns.values, yticklabels=corr.columns.values)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6JDz-f43xV1Q",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "# Selecting only correlated features\n",
         "corr_y = abs(corr[\"Y\"])\n",
         "highest_corr = corr_y[corr_y >0.5]\n",
-        "highest_corr.sort_values(ascending=True)\n"
+        "highest_corr.sort_values(ascending=True)"
       ],
       "execution_count": null,
       "outputs": []
@@ -671,9 +736,9 @@
       "source": [
         "start = time.process_time()\n",
         "trainedsvm = svm.LinearSVC().fit(X_Train3, Y_Train3)\n",
-        "print(time.process_time() - start)\n",
+        "print(\"time = \",time.process_time() - start)\n",
         "predictionsvm = trainedsvm.predict(X_Test3)\n",
-        "print(confusion_matrix(Y_Test3,predictionsvm))\n",
+        "print(\"Confusion Matrix:\",confusion_matrix(Y_Test3,predictionsvm))\n",
         "print(classification_report(Y_Test3,predictionsvm))"
       ],
       "execution_count": null,
@@ -686,7 +751,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Univariate Feature Selection"
+        "**Univariate Feature Selection**"
       ]
     },
     {
@@ -711,9 +776,6 @@
         "colab": {}
       },
       "source": [
-        "from sklearn.feature_selection import SelectKBest\n",
-        "from sklearn.feature_selection import chi2\n",
-        "\n",
         "X_new = SelectKBest(chi2, k=2).fit_transform(Scaled_X, Y)\n",
         "X_Train3, X_Test3, Y_Train3, Y_Test3 = train_test_split(X_new, Y, test_size = 0.30, random_state = 101)\n",
         "start = time.process_time()\n",
@@ -733,7 +795,7 @@
         "colab_type": "text"
       },
       "source": [
-        "LAsso Regression"
+        "# **Lasso Regression**"
       ]
     },
     {
@@ -744,8 +806,6 @@
         "colab": {}
       },
       "source": [
-        "from sklearn.linear_model import LassoCV\n",
-        "\n",
         "regr = LassoCV(cv=5, random_state=101)\n",
         "regr.fit(X_Train,Y_Train)\n",
         "print(\"LassoCV Best Alpha Scored: \", regr.alpha_)\n",
