--- a/FeatureSelection1.ipynb
+++ b/FeatureSelection1.ipynb
@@ -182,16 +182,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "DkcCUMF437fG",
-        "colab_type": "text"
-      },
-      "source": [
-        "Univariate feature selection works by selecting the best features based on univariate statistical tests. It can be seen as a preprocessing step to an estimator"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "m8JrQGnX_gPd",
         "colab_type": "text"
       },
@@ -200,9 +190,11 @@
         "<br>\n",
         "SelectPercentile removes all but a user-specified highest scoring percentage of features<br>\n",
         "<br>\n",
-        "using common univariate statistical tests for each feature: false positive rate SelectFpr, false discovery rate SelectFdr, or family wise error SelectFwe.<br>\n",
-        "<br>\n",
-        "GenericUnivariateSelect allows to perform univariate feature selection with a configurable strategy. This allows to select the best univariate selection strategy with hyper-parameter search estimator.<br>"
+        "Uses common univariate statistical tests for each feature:<br> \n",
+        "* false positive rate SelectFpr<br>\n",
+        "* false discovery rate SelectFdr<br>\n",
+        "* family wise error SelectFwe<br>\n",
+        "* genericUnivariateSelect - selects the best strategy with a hyper parameter search estimator"
       ]
     },
     {
@@ -242,9 +234,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         },
-        "outputId": "b8c5e821-d0ab-4fd9-f126-1969716c235b"
+        "outputId": "0520d1f7-730f-493c-bf03-2b60d63c2910"
       },
       "source": [
         "from sklearn.datasets import load_iris\n",
@@ -253,7 +245,7 @@
         "X, y = load_iris(return_X_y=True)\n",
         "X.shape"
       ],
-      "execution_count": null,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -265,7 +257,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 97
         }
       ]
     },
@@ -276,7 +268,7 @@
         "colab_type": "text"
       },
       "source": [
-        "These objects take as input a scoring function that returns univariate scores and p-values (or only scores for SelectKBest and SelectPercentile)<br><br>\n",
+        "These functions take as input a scoring function that returns univariate scores and p-values (or only scores for SelectKBest and SelectPercentile)<br><br>\n",
         "Select the two highest scoring features"
       ]
     },
@@ -287,15 +279,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         },
-        "outputId": "89cf785e-6c51-482a-e699-cd5a694117c9"
+        "outputId": "2c229b22-83bc-4cb5-d5e6-4c11fa30d45b"
       },
       "source": [
         "X_new = SelectKBest(chi2, k=2).fit_transform(X, y)\n",
         "X_new.shape"
       ],
-      "execution_count": null,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -307,7 +299,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 81
         }
       ]
     },
@@ -339,7 +331,7 @@
         "from sklearn.pipeline import make_pipeline\n",
         "from sklearn.feature_selection import SelectKBest, f_classif"
       ],
-      "execution_count": null,
+      "execution_count": 82,
       "outputs": []
     },
     {
@@ -359,7 +351,7 @@
         "colab_type": "text"
       },
       "source": [
-        "This Iris dataset has 24 features and 150 rows"
+        "As an experiment, use the Iris dataset, but add noise to it so that it has 24 features. "
       ]
     },
     {
@@ -369,9 +361,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         },
-        "outputId": "c51d6953-e54a-495b-887d-1d9c3bd551ab"
+        "outputId": "d159009f-52b9-4fda-92af-707006e01737"
       },
       "source": [
         "# Import the Iris dataset\n",
@@ -382,9 +374,9 @@
         "\n",
         "# Add the noisy data to the informative features\n",
         "X = np.hstack((X, E))\n",
-        "X.shape"
+        "X.shape\n"
       ],
-      "execution_count": null,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -396,7 +388,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 89
         }
       ]
     },
@@ -423,31 +415,7 @@
         "        X, y, stratify=y, random_state=0\n",
         ")"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "3FP8xze960k3",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "X_indices = np.arange(X.shape[-1])\n",
-        "\n",
-        "# #############################################################################\n",
-        "# Univariate feature selection with F-test for feature scoring\n",
-        "# We use the default selection function to select the four\n",
-        "# most significant features\n",
-        "# #############################################################################\n",
-        "\n",
-        "selector = SelectKBest(f_classif, k=4)\n",
-        "selector.fit(X_train, y_train)\n",
-        "scores = -np.log10(selector.pvalues_)\n",
-        "scores /= scores.max()"
-      ],
-      "execution_count": null,
+      "execution_count": 90,
       "outputs": []
     },
     {
@@ -467,9 +435,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         },
-        "outputId": "76d9fdee-d4d1-460d-fafd-49db986c6a59"
+        "outputId": "04a5840e-016f-4906-de6f-e9048bb82e9b"
       },
       "source": [
         "# Compare to the weights of an SVM\n",
@@ -481,7 +449,7 @@
         "svm_weights = np.abs(clf[-1].coef_).sum(axis=0)\n",
         "svm_weights /= svm_weights.sum()"
       ],
-      "execution_count": null,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
@@ -505,13 +473,35 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "3FP8xze960k3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X_indices = np.arange(X.shape[-1])\n",
+        "\n",
+        "# #############################################################################\n",
+        "#Using the SelectKBest function, select the best 4 best features to keep\n",
+        "# #############################################################################\n",
+        "\n",
+        "selector = SelectKBest(f_classif, k=4)\n",
+        "selector.fit(X_train, y_train)\n",
+        "scores = -np.log10(selector.pvalues_)\n",
+        "scores /= scores.max()"
+      ],
+      "execution_count": 94,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "n1v6GqYa8raL",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         },
-        "outputId": "414810c5-2820-4b29-f1d1-932cb2d64f54"
+        "outputId": "c9e13fa7-1f2e-4b2c-93e7-041327863f4d"
       },
       "source": [
         "clf_selected = make_pipeline(\n",
@@ -524,7 +514,7 @@
         "svm_weights_selected = np.abs(clf_selected[-1].coef_).sum(axis=0)\n",
         "svm_weights_selected /= svm_weights_selected.sum()"
       ],
-      "execution_count": null,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "stream",
@@ -542,9 +532,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 367
+          "height": 366
         },
-        "outputId": "4d3a7e42-8fc2-4c9b-eaf6-c8b649d4639b"
+        "outputId": "0fe1095b-ff5e-4f4a-bec8-b6abf86369e6"
       },
       "source": [
         "plt.figure(1)\n",
@@ -566,7 +556,7 @@
         "plt.legend(loc='upper right')\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "display_data",
