--- a/FeatureSelection1.ipynb
+++ b/FeatureSelection1.ipynb
@@ -65,14 +65,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "a503130d-6616-4e05-e0d5-21dde14f2596"
+        "outputId": "05941052-50a5-4084-b7d3-7cb319abf887"
       },
       "source": [
         "from sklearn.feature_selection import VarianceThreshold\n",
         "X = [[0, 0, 1], [0, 1, 0], [1, 0, 0], [0, 1, 1], [0, 1, 0], [0, 1, 1]]\n",
         "print(X)"
       ],
-      "execution_count": null,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,7 +100,9 @@
         "colab_type": "text"
       },
       "source": [
-        "As expected, VarianceThreshold has removed the first column, which has a probability  > .8 of containing a zero."
+        "As expected, VarianceThreshold has removed the first column, \n",
+        "which had 0,0,1,0,0,0 <br>\n",
+        "There is very little variance in this column, so it will not add much information for our model to use when making predictions. So remove this column.  "
       ]
     },
     {
@@ -112,13 +114,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 121
         },
-        "outputId": "c8de3fde-1b24-4e2f-8118-8979e6fbc9e3"
+        "outputId": "3cad979c-e0b5-4f74-afd5-43f1a0c24718"
       },
       "source": [
         "sel = VarianceThreshold(threshold=(0.16))\n",
         "sel.fit_transform(X)"
       ],
-      "execution_count": null,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -135,7 +137,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 68
+          "execution_count": 100
         }
       ]
     },
@@ -166,7 +168,7 @@
         "#Assignment 1\n",
         "xx = [[0,1,2,0,2],[2,2,1,0,1],[1,1,1,0,1],[0,2,1,0,0],[2,1,1,0,0],[1,1,2,0,0],[2,2,0,0,1],[1,0,1,0,1],[0,2,1,0,1],[2,1,1,1,0],[0,1,1,0,2],[1,2,0,0,1],[2,1,1,0,1],[2,0,1,0,1]]\n"
       ],
-      "execution_count": null,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -236,7 +238,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "0520d1f7-730f-493c-bf03-2b60d63c2910"
+        "outputId": "71b56d00-8638-4237-b267-4bd56b9d1bdc"
       },
       "source": [
         "from sklearn.datasets import load_iris\n",
@@ -245,7 +247,7 @@
         "X, y = load_iris(return_X_y=True)\n",
         "X.shape"
       ],
-      "execution_count": 97,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -257,7 +259,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 97
+          "execution_count": 102
         }
       ]
     },
@@ -268,8 +270,12 @@
         "colab_type": "text"
       },
       "source": [
-        "These functions take as input a scoring function that returns univariate scores and p-values (or only scores for SelectKBest and SelectPercentile)<br><br>\n",
-        "Select the two highest scoring features"
+        "These functions take as input a scoring function that returns univariate scores and p-values (or only scores for SelectKBest and SelectPercentile)<br>\n",
+        "For regression use: f_regression, mutual_info_regression\n",
+        "\n",
+        "For classification use: chi2, f_classif, mutual_info_classif\n",
+        "<br><br>\n",
+        "Then select the highest scoring features"
       ]
     },
     {
@@ -281,13 +287,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "2c229b22-83bc-4cb5-d5e6-4c11fa30d45b"
+        "outputId": "8f6b8b55-2bd2-43da-b19c-3384746837d0"
       },
       "source": [
+        "#Use chi2 to score the the columns. Select the two columns that have the highest scores\n",
         "X_new = SelectKBest(chi2, k=2).fit_transform(X, y)\n",
         "X_new.shape"
       ],
-      "execution_count": 81,
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -299,7 +306,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 81
+          "execution_count": 104
         }
       ]
     },
@@ -331,7 +338,7 @@
         "from sklearn.pipeline import make_pipeline\n",
         "from sklearn.feature_selection import SelectKBest, f_classif"
       ],
-      "execution_count": 82,
+      "execution_count": 105,
       "outputs": []
     },
     {
@@ -363,7 +370,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "d159009f-52b9-4fda-92af-707006e01737"
+        "outputId": "94e8c96c-4f50-481d-9387-130c810d6fdb"
       },
       "source": [
         "# Import the Iris dataset\n",
@@ -376,7 +383,7 @@
         "X = np.hstack((X, E))\n",
         "X.shape\n"
       ],
-      "execution_count": 89,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -388,7 +395,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 89
+          "execution_count": 106
         }
       ]
     },
@@ -415,7 +422,7 @@
         "        X, y, stratify=y, random_state=0\n",
         ")"
       ],
-      "execution_count": 90,
+      "execution_count": 107,
       "outputs": []
     },
     {
@@ -437,7 +444,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "04a5840e-016f-4906-de6f-e9048bb82e9b"
+        "outputId": "d202d9b2-e375-4d5a-acdf-b077cec60e90"
       },
       "source": [
         "# Compare to the weights of an SVM\n",
@@ -449,7 +456,7 @@
         "svm_weights = np.abs(clf[-1].coef_).sum(axis=0)\n",
         "svm_weights /= svm_weights.sum()"
       ],
-      "execution_count": 95,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "stream",
@@ -478,7 +485,7 @@
         "colab": {}
       },
       "source": [
-        "X_indices = np.arange(X.shape[-1])\n",
+        "#X_indices = np.arange(X.shape[-1])\n",
         "\n",
         "# #############################################################################\n",
         "#Using the SelectKBest function, select the best 4 best features to keep\n",
@@ -489,7 +496,7 @@
         "scores = -np.log10(selector.pvalues_)\n",
         "scores /= scores.max()"
       ],
-      "execution_count": 94,
+      "execution_count": 109,
       "outputs": []
     },
     {
@@ -501,7 +508,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "c9e13fa7-1f2e-4b2c-93e7-041327863f4d"
+        "outputId": "3ed90005-134f-4057-f028-9964d2af1d95"
       },
       "source": [
         "clf_selected = make_pipeline(\n",
@@ -514,7 +521,7 @@
         "svm_weights_selected = np.abs(clf_selected[-1].coef_).sum(axis=0)\n",
         "svm_weights_selected /= svm_weights_selected.sum()"
       ],
-      "execution_count": 87,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "stream",
@@ -526,6 +533,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LkoG3hmOsyJ6",
+        "colab_type": "text"
+      },
+      "source": [
+        "It is clear the model that used only the highest scoring SelectKBest values has a higher performance. "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "LKAGpuqY42j0",
@@ -534,7 +551,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 366
         },
-        "outputId": "0fe1095b-ff5e-4f4a-bec8-b6abf86369e6"
+        "outputId": "31c6f6ce-9615-4940-9013-c8fdc8d120d2"
       },
       "source": [
         "plt.figure(1)\n",
@@ -556,7 +573,7 @@
         "plt.legend(loc='upper right')\n",
         "plt.show()"
       ],
-      "execution_count": 88,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "display_data",
@@ -583,6 +600,32 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TFltpomvtCOE",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Assignment 2**\n",
+        "The plot above shows two of the univariate scores are much higher that the other scores. <br>\n",
+        "Train the model using only the two highest scores. <br>\n",
+        "Does the model performance get better or worse?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GVWoHICAtVTw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Assignment 2\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
