--- a/FeatureSelection1.ipynb
+++ b/FeatureSelection1.ipynb
@@ -624,7 +624,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 338
+          "height": 267
         },
         "outputId": "ef365cec-2420-4ae0-e360-a20a55e53603"
       },
@@ -1279,7 +1279,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 385
+          "height": 299
         },
         "outputId": "b0b50b2f-c6b6-426c-cfec-8c53957627bd"
       },
@@ -2197,7 +2197,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 415
+          "height": 323
         },
         "outputId": "5c634492-0091-4c5e-98c1-3dc302fe09b0"
       },
@@ -2246,6 +2246,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UI7BX7uJBlFx",
+        "colab_type": "text"
+      },
+      "source": [
+        "To use the SelectFromModel feature extraction, you can specify a threshold value. <br>\n",
+        "\n",
+        "There are also built-in heuristics for finding a threshold using a string argument. Available heuristics are “mean”, “median” and float multiples of these like “0.1*mean”. <br>\n",
+        "\n",
+        "In combination with the threshold criteria, one can use the max_features parameter to set a limit on the number of features to select."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "T_ENV5cQKoon",
@@ -2254,9 +2268,10 @@
       },
       "source": [
         "from sklearn.feature_selection import SelectFromModel\n",
-        "from sklearn.linear_model import LogisticRegression"
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn import preprocessing"
       ],
-      "execution_count": 262,
+      "execution_count": 340,
       "outputs": []
     },
     {
@@ -2266,7 +2281,8 @@
         "colab_type": "text"
       },
       "source": [
-        "**Create data**"
+        "**Create data**<br>\n",
+        "Four rows with four features"
       ]
     },
     {
@@ -2283,7 +2299,7 @@
         "     [ 1.92,  1.48,  0.65, 0.95 ]]\n",
         "y3 = [0, 1, 0, 1]"
       ],
-      "execution_count": 263,
+      "execution_count": 275,
       "outputs": []
     },
     {
@@ -2299,6 +2315,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ln4wzZEZB-6z",
+        "colab_type": "text"
+      },
+      "source": [
+        "#**SelectFromModel using Logistic Regression** "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "82Tpdh8ZKs2h",
@@ -2307,7 +2333,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 69
         },
-        "outputId": "5bc04bac-59b5-4ac7-c48c-387d4bada683"
+        "outputId": "18e4ca91-60d5-4474-f294-f773ae0e6240"
       },
       "source": [
         "selector = SelectFromModel(estimator=LogisticRegression()).fit(X3, y3)\n",
@@ -2315,7 +2341,7 @@
         "print(\"selector threshold: \",selector.threshold_)\n",
         "print(\"selector get support: \",selector.get_support())"
       ],
-      "execution_count": 265,
+      "execution_count": 305,
       "outputs": [
         {
           "output_type": "stream",
@@ -2337,12 +2363,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 86
         },
-        "outputId": "6ef18a35-e778-4249-9dbf-759742b25e8a"
+        "outputId": "2ff44080-23cb-4f50-c952-51097f2f8eed"
       },
       "source": [
         "selector.transform(X3)"
       ],
-      "execution_count": 267,
+      "execution_count": 306,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2357,7 +2383,179 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 267
+          "execution_count": 306
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dE5XNjGDEhW8",
+        "colab_type": "text"
+      },
+      "source": [
+        "**SelectFromModel Example 2** using linear support vector machine and the Iris dataset. <br>\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1rCAQnKSDADq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.svm import LinearSVC\n",
+        "from sklearn import datasets\n",
+        "from sklearn.feature_selection import SelectFromModel\n",
+        "iris = datasets.load_iris()"
+      ],
+      "execution_count": 386,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5vmLJVcHU59Q",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#iris\n"
+      ],
+      "execution_count": 387,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JI5eD9hpTvJJ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "ea2ac024-d944-4a1e-87e9-bcaeb062e697"
+      },
+      "source": [
+        "X5 = iris.data[:,:]\n",
+        "y5 =iris.target\n",
+        "X5.shape"
+      ],
+      "execution_count": 377,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(150, 4)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 377
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UTykVyo2Q9yF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 86
+        },
+        "outputId": "e3c5fc17-e148-48de-a40a-110743196490"
+      },
+      "source": [
+        "iris.feature_names"
+      ],
+      "execution_count": 378,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['sepal length (cm)',\n",
+              " 'sepal width (cm)',\n",
+              " 'petal length (cm)',\n",
+              " 'petal width (cm)']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 378
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ttje9iqvDG2t",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "3fd2aa43-e0d0-48db-fcf8-ecf22c54bf41"
+      },
+      "source": [
+        "#dual = True when the number of features > the number of rows\n",
+        "#With SVMs and logistic-regression, the parameter C controls the sparsity:\n",
+        "#the smaller C the fewer features selected.\n",
+        "#Penalty specifies the norm used in the penalization.\n",
+        "lsvc = LinearSVC(C=0.01, penalty=\"l1\", dual=False, max_iter=5000).fit(X5, y5)\n",
+        "model4 = SelectFromModel(lsvc, prefit=True)\n",
+        "X_new = model4.transform(X5)\n",
+        "X_new.shape"
+      ],
+      "execution_count": 379,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(150, 3)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 379
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lCiCxIzbVSzw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "a426ff6f-4654-40bb-9f5f-f5794d215a36"
+      },
+      "source": [
+        "feature_idx= model4.get_support()\n",
+        "feature_idx"
+      ],
+      "execution_count": 389,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ True,  True,  True, False])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 389
         }
       ]
     },
