--- a/PCA0.ipynb
+++ b/PCA0.ipynb
@@ -6,7 +6,7 @@
       "name": "PCA0.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNIRnOCavBDJi0ecLV9UqTp",
+      "authorship_tag": "ABX9TyOpGhhPC9P+V4ZY2by0cxso",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,6 +85,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "f3_2HaF26SFA",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Can we predict how a viewer will rate a movie?**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "zNXU-8X1wlpw",
         "colab_type": "text"
       },
@@ -128,7 +138,20 @@
         "colab": {}
       },
       "source": [
-        "movies.drop(['title','genres'],axis=1)"
+        "movies = movies.drop(['title','genres'],axis=1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pktg6DDY5Msy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "movies.head(40)"
       ],
       "execution_count": null,
       "outputs": []
@@ -143,7 +166,21 @@
       "source": [
         "M = movies.pivot_table(index=['userId_x'], columns=['movieId'], values='rating')\n",
         "m = M.shape\n",
+        "print(\"shape = \", m)\n",
         "df1 = M.replace(np.nan, 0, regex=True)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TH7Tndwp6Ap6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df1.head()"
       ],
       "execution_count": null,
       "outputs": []
@@ -217,8 +254,8 @@
         "#Calculating eigenvectors and eigenvalues on covariance matrix\n",
         "cov_mat = np.cov(X_std.T)\n",
         "eig_vals, eig_vecs = np.linalg.eig(cov_mat)\n",
-        "print('Eigenvectors n%s' %eig_vecs)\n",
-        "print('nEigenvalues n%s' %eig_vals)"
+        "print('Eigenvectors \\n%s' %eig_vecs)\n",
+        "print('\\nEigenvalues \\n%s' %eig_vals)"
       ],
       "execution_count": null,
       "outputs": []
@@ -309,7 +346,7 @@
         "colab_type": "text"
       },
       "source": [
-        "The scree plot clearly indicates that the first 500 principal components contain the maximum information (variance) within the data. Note that the initial data set had approximately 9000 features which can now be narrowed down to just 500. Thus, you can now easily perform further analysis on the data since the redundant or insignificant variables are out. This is the power of dimensionality reduction."
+        "The scree plot clearly indicates that the first 500 principal components contain the maximum information (variance) within the data. Note that the initial data set had approximately 1550 features which can now be narrowed down to just 500. You can now easily perform further analysis on the data since the redundant or insignificant variables are out. This is the power of dimensionality reduction."
       ]
     }
   ]
