--- a/PCA0.ipynb
+++ b/PCA0.ipynb
@@ -6,7 +6,7 @@
       "name": "PCA0.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOpGhhPC9P+V4ZY2by0cxso",
+      "authorship_tag": "ABX9TyN+H5Op5U0PY6Cc4de6ussl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,19 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/PCA0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "d7d6JVzSBequ"
+      },
+      "source": [
+        "# **Principal component analysis (PCA)** \n",
+        "PCA is a multivariate technique used to emphasize variation and bring out strong patterns in a dataset. It's often used to make data easy to explore and visualize. It was invented in 1901 by Karl Pearson.\n",
+        "\n",
+        "When studying many variables at the same time, in order to interpret the information in a more meaningful form, it is necessary to reduce the number of variables to a few linear combinations of the data. Each linear combination will correspond to a principal component (PC). The number of PCs is less than or equal to the smaller of the number of original variables or the number of observations."
       ]
     },
     {
